tests/integration/should-fail/PassageNotAllowedChars1.twee
::Start
Start

::NotAllowed1]
text